Replaces the simple calls with no arguments to newInstance()
git-svn-id: https://svn.libreccm.org/ccm/ccm_ng@5078 8810af33-2d31-482b-a856-94f89814c4df

Former-commit-id: a78c71fa2013b83893d944611c5ecbf0f6d97a1d