@@ -24,6 +24,7 @@ import com.arsdigita.web.RedirectSignal;
 import java.io.File;
 import java.io.IOException;
 import java.io.StringReader;
+import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Vector;
@@ -154,7 +155,7 @@ public abstract class BaseDispatcherServlet extends HttpServlet
             File file = new File(getServletContext().getRealPath(
                 "/WEB-INF/web.xml"));
             // all we care about is the welcome-file-list element
-            SAXParserFactory spf = SAXParserFactory.newInstance();
+            SAXParserFactory spf = SAXParserFactory.class.getDeclaredConstructor().newInstance();
             spf.setValidating(false);
             SAXParser parser = spf.newSAXParser();
             parser.parse(file, new WebXMLReader());
@@ -164,6 +165,8 @@ public abstract class BaseDispatcherServlet extends HttpServlet
             LOGGER.error("error in init", pce);
         } catch (IOException ioe) {
             LOGGER.error("error in init", ioe);
+        } catch (IllegalAccessException | InstantiationException | InvocationTargetException | NoSuchMethodException e) {
+            LOGGER.error(e);
         }
         // default to index.jsp, index.html
         if (m_welcomeFiles.isEmpty()) {
